[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/ShipEnemy.png" type="Texture" id=1]
[ext_resource path="res://scripts/ShipEnemy.gd" type="Script" id=2]
[ext_resource path="res://prefabs/BouletCanon.tscn" type="PackedScene" id=3]
[ext_resource path="res://prefabs/Explosion.tscn" type="PackedScene" id=4]

[node name="ShipEnemy" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 2 )
BouletCanon = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -2.32354, -12.459, 2.482, -12.4239, 7.42785, -7.443, 7.60324, 12.5509, -7.47985, 12.621, -7.58508, -7.37284 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -3.38172, -12.8861, 3.23715, -13.0011, 8.47318, -7.53466, 8.28737, 13.3508, -8.32791, 13.4534, -8.46838, -7.71015 )

[node name="Explosion" parent="." instance=ExtResource( 4 )]

[node name="CanonsR" type="Node2D" parent="."]
position = Vector2( 8, 0 )

[node name="Canon1" type="Position2D" parent="CanonsR"]
position = Vector2( 0, -1 )

[node name="Canon2" type="Position2D" parent="CanonsR"]
position = Vector2( 0, 7 )

[node name="CanonsL" type="Node2D" parent="."]
position = Vector2( -7, 0 )

[node name="Canon1" type="Position2D" parent="CanonsL"]
position = Vector2( 0, -1 )

[node name="Canon2" type="Position2D" parent="CanonsL"]
position = Vector2( 0, 7 )

[node name="CanShootTimerL" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CanShootTimerR" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="CanShootTimerL" to="." method="_on_CanShootTimerL_timeout"]
[connection signal="timeout" from="CanShootTimerR" to="." method="_on_CanShootTimerR_timeout"]
